# AI-write-p2p

./: README.md  request.md
client/: CMakeLists.txt  p2p_handler.cpp.bk  p2p_handler.hpp  stu_client.cpp
inc/: stun.h
network_monitor/: CMakeLists.txt  android_log.txt  readme.md  toolchain-arm64.cmake
network_monitor/cJson/: CMakeLists.txt  cJSON.c  cJSON.h
network_monitor/inc/: cJSON.h
network_monitor/rt_monitor/: CMakeLists.txt  handle_ip_route.c  handle_ip_route.h  rt_monitor.c
network_monitor/uevent_monitor/: CMakeLists.txt  uevent_monitor.c
nolock_queue/: CMakeLists.txt  nolock_queue.cpp
service/: CMakeLists.txt  stun_ser.cpp  stun_ser.hpp  stun_server
tengxun/: CMakeLists.txt  config.json
tengxun/include/: nat_detection.h  port_analysis.h
tengxun/src/: nat_detection.cpp  port_analysis.cpp  stu_client.cpp
tengxun/test/: nat_test.cpp
threadpool/: thread  thread_c.c  threadpool.cpp
